# pyxwin

./: .gitignore  LICENSE.md  README.md  pre_push.py  pyproject.toml
.github/scripts/: package_python.py  uv_download.py
.github/workflows/: publish.yml  windows-python-dev-kit.yml
LICENSES/: LICENSE-Microsoft-Build-Tools.md
src/pyxwin/: __init__.py  __main__.py  config.py
src/pyxwin/core/: __init__.py  aiofiles_wrapper.py  https_client.py  pyxwin_exceptions.py
src/pyxwin/io_operations/: __init__.py  file_io.py
src/pyxwin/utils/: __init__.py  aiofiles_wrapper.py
src/pyxwin/wincrt_sdk/: __init__.py  download_unpack.py  manifest_datatypes.py  msft_file_operations.py  vs_manifest.py  win_crt.py  win_sdk.py
src/pyxwin_cli/: __init__.py  __main__.py
src/pyxwin_cli/wincrtsdk_cli/: __init__.py  wincrt_cmd.py  wincrt_cmd_options.py
